nested section title in header tag

--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,11 @@
 <!-- DOCTYPE HTML -->
-<html>
+<html lang="en">
 	<head>
+		<link rel="stylesheet" type="text/css" href="resume.css">
 	</head>
 	<body>
 		<header> 
+
 			<h1>Tang</h1> 
 		</header>
 		<address>
@@ -23,7 +25,9 @@
 						</ul>
 			</section>
 			<section>
-				<h2>Experience</h2>
+				<header>
+					<h2>Experience</h2>
+				</header>
 				<ul>
 					<li>China Arts Fellowship International Curatorial Intern</li>
 					<ul>
@@ -48,7 +52,9 @@
 				</ul>
 			</section>
 			<section>
-				<h2> Skills</h2>
+				<header>
+					<h2> Skills</h2>
+				</header>
 				<ul>
 					<li>Languages: English, Spanish, some Mandarin Chinese and Japanese</li>
 					<li>Technical skills: HTML, CSS, Javascript</li>
