--- a/shiritoriGen/shiritoriGen.html
+++ b/shiritoriGen/shiritoriGen.html
@@ -1,9 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<script src = './project1.js' type = 'text/javascript'></script>
-	<script src = './p5.min.js' type = 'text/javascript'></script>
-	<script src = './p5.dom.min.js' type = 'text/javascript'></script>
+	<script src = './shiritoriGen.js' type = 'text/javascript'></script>
 </head>
 <body>
 	<h1> shiritori poem generator </h1>
