created and added metamorph proj

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 					<li>This is not quite as complex as the shiritoriGen, but I cleaned up a lot of the nonsense and tried my best to work using functional programming strategies. The only places where side effects happen are that I'm mutating my textArr (which doesn't matter b/c it's initialized in the scope of orderByLength anyways), and I'm using a p tag as an output to render the final result. Everything else just passes return values from one function to another. I could probably reduce time complexity, or use built-in methods for some of the stuff I'm doing (I wrote my own function to flatten an array, which I probably didn't have to do), but I'm prety happy with how it works for now.</li>
 				</ul>
 			</li>
+			<li>
+                                <a href='./metamorph/metamorph.html'>uncover text by length</a>
+                                <ul>
+                                        <li>
+						Paste in whatever text you want, hit submit, and hover over the various words to see a message
+					</li>
+                                </ul>
+                        </li>
+
 		</ul>
 	</body>
 </html>
