added initial text to metamorph proj to make it more usable

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 <a href='./metamorph/metamorph.html'>uncover text by length</a>
                                 <ul>
                                         <li>
-						Paste in whatever text you want, hit submit, and hover over the various words to see a message
+						a little experiment in mixing my own text with someone else's.
 					</li>
                                 </ul>
                         </li>
