--- a/metamorph/metamorph.html
+++ b/metamorph/metamorph.html
@@ -3,9 +3,7 @@
 <head>
 	<script type='text/javascript' src='./metamorph.js'></script>
 </head>
-<body>
-	<textarea id='textArea'></textarea>
-	<button id='submit' onclick='handleClick()'>submit</button>
+<body onload='loaded()'>
 	<p id='output'></p>
 </body>
 </html>
