added styling to metamorph

--- a/metamorph/metamorph.html
+++ b/metamorph/metamorph.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<script type='text/javascript' src='./metamorph.js'></script>
+	<link rel='stylesheet' type='text/css' href='./style.css'>
 </head>
 <body onload='loaded()'>
+	<div class='wrapper'>
 	<p id='output'></p>
+	</div>
 </body>
 </html>
