adding rivets + removing swp files

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 					</li>
                                 </ul>
                         </li>
+                        <li>
+                          <a href='./rivets/index.html'>rivets</a>
+                          <ul>
+                            <li>
+                              small narrative + digital drawings
+                            </li>
+                          </ul>
+                        </li>
 
 		</ul>
 	</body>
