--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,76 @@
 	<body>
 		<header> 
 
-			<h1>Tang</h1> 
+			<h1>Mari Tang</h1> 
 		</header>
 		<address>
-			(310) 999 3885 | <a href="mailto:eytang8@gmail.com">eytang8@gmail.com</a> | <a href="ttaanngg.com">ttaanngg.com</a>
+			(310) 999 3885 | <a href="mailto:eytang8@gmail.com">eytang8@gmail.com</a>
 		</address>
 		<main>
+			<section>
+				<header>
+					<h2>Experience</h2>
+				</header>
+				<ul>
+					<li><strong>Senior Software Engineer</strong> - <strong>PayPal</strong></li>
+					<ul>
+						<li>May 2025 - Present (7 mos)</li>
+						<li>mostly doing ads platform work, including designing and developing internal dashboards for ad campaign management</li>
+					</ul>
+					<li><strong>Software Development Engineer III</strong> - <strong>PayPal (Honey)</strong></li>
+					<ul>
+						<li>Nov 2022 - May 2025 (2 yrs 7 mos)</li>
+						<li>Los Angeles Metropolitan Area | Full-time</li>
+						<li>Did a bunch of work on Honey's Google Chrome and mac OS extensions and checkout webapp, primarily focused on rewards suggestion and engagement for consumers</li>
+						<li>Built rewards promotions into paypal checkout, including presentments and advertiser tagging to track customer funnels and produce reveneue through affiliate network partnerships</li>
+						<li>designed a rebuild of promotions APIs to introduce pagination and authentication gates to previously non-externally exposed APIs</li>
+						<li>Currently working on internal promotions tooling for our ops team and merchant partners, including greenfield work in React / tRPC / nextjs / express / google spanner</li>
+					</ul>
+					<li><strong>Software Development Engineer III</strong> - <strong>Vrbo</strong></li>
+					<ul>
+						<li>Apr 2021 - Nov 2022 (1 yr 8 mos) | Full-time</li>
+						<li>i broke prod (then fixed it)</li>
+						<li>did a bunch of work in react / typescript / graphql as part of an org-wide rearchitechting of our webapps</li>
+						<li>onboarded other devs and assisted other teams with this</li>
+						<li>coached interns through the onboarding process and helped them learn how to work in an enterprise codebase + contribute code that got to prod within 2 months. (they got return offers)</li>
+					</ul>
+					<li><strong>Software Development Engineer II</strong> - <strong>Vrbo</strong></li>
+					<ul>
+						<li>Sep 2020 - Apr 2021 (8 mos)</li>
+						<li>Austin, Texas, United States</li>
+						<li>Rates and Inventory team. Mostly React and Apollo GraphQL.</li>
+						<li>reworked large chunks of the existing VRBO scheduling and pricing calendars for the webapp's 2.0 release, unifying two completely separate webapps with large codebases into a single, vastly improved experience.</li>
+					</ul>
+					<li><strong>Software Engineer</strong> - <strong>IBM</strong></li>
+					<ul>
+						<li>Jan 2020 - Sep 2020 (9 mos) | Full-time</li>
+						<li>Austin, Texas Area</li>
+						<li>Extended Kibana dashboard functionality using Angular and vanilla DOM manipulation to provide additional views, including historical inventory reports to track the status of resources spread across multiple cloud platforms and deployments</li>
+						<li>Forked and maintained internal version of Bootstrap-Treeview to separate view and data layers in order to enable custom formatting for menu items</li>
+						<li>Rebuilt frontend elasticsearch querying functionality to address technical debt and centralize common query operations, including filtering and bucketing by time boundaries to produce customized reports</li>
+						<li>Developed interactive geomap functionality to provide interactive breakdowns of distributed resources, rendered by location</li>
+					</ul>
+					<li><strong>Software Engineering Fellow</strong> - <strong>Codesmith</strong></li>
+					<ul>
+						<li>May 2019 - Aug 2019 (4 mos) | Full-time</li>
+						<li>Greater Los Angeles Area</li>
+						<li>Created virtualized Linux images with automated deployment and provisioning to reduce ramp-up time for incoming developers, providing uniform tools and dependencies in a persistent environment compatible with a production tech stack</li>
+						<li>Designed and implemented customer acquisition vertical in React and redux-form</li>
+						<li>Built out customer analytics functionality and pipelines in NodeJS/Express to enable customer insights</li>
+						<li>Mentored junior developers by providing code review sessions, tech talks, and personalized feedback to minimize technical debt and ensure best practices</li>
+					</ul>
+					<li><strong>International Curatorial Intern</strong> - <strong>Rockbund Art Museum</strong></li>
+					<ul>
+						<li>Feb 2018 - Aug 2018 (7 mos) | Internship</li>
+						<li>Shanghai, China</li>
+					</ul>
+					<li><strong>Operations Assistant</strong> - <strong>The Wende Museum of the Cold War</strong></li>
+					<ul>
+						<li>Aug 2017 - Feb 2018 (7 mos)</li>
+						<li>Greater Los Angeles Area</li>
+					</ul>
+				</ul>
+			</section>
 			<section>
 				<h2> Education</h2>
 				<ul>
@@ -24,44 +88,6 @@
 							<li>Santa Monica College, Class of 2014</li>
 						</ul>
 			</section>
-			<section>
-				<header>
-					<h2>Experience</h2>
-				</header>
-				<ul>
-					<li>China Arts Fellowship International Curatorial Intern</li>
-					<ul>
-						<li>Rockbund Art Museum, Shanghai, China | Mar 2018 - August 2018</li>
-						<li>6 month long lanuage program and museum internship in Shanghai.</li>
-					</ul>
-					<li>Visitor Services Assistant</li>
-					<ul>
-						<li>Wende Museum of the Cold War, Culver City CA | Nov 2017 - Feb 2018</li>
-						<li>Provided assistance with installation and AV, as well as tours</li>
-					</ul>
-					<li>Visitor Experience Representative</li>
-					<ul>
-						<li>UCLA Hammer Museum, Los Angeles CA | Feb 2017 - July 2017</li>
-						<li>Provided information and context in order to develop public interest in contemporary art</li>
-					</ul>
-					<li>George and Sakaye Aratani Community Intern</li>
-					<ul>
-						<li>Japanese American National Museum, Los Angeles, CA | August 2015 - September 2015</li>
-						<li>Competitive internship scholarship award. Produced research for Transpacific Borderlands exhibition.</li>
-					</ul>
-				</ul>
-			</section>
-			<section>
-				<header>
-					<h2> Skills</h2>
-				</header>
-				<ul>
-					<li>Languages: English, Spanish, some Mandarin Chinese and Japanese</li>
-					<li>Technical skills: HTML, CSS, Javascript</li>
-					<li>Adobe Creative Suite: Photoshop, InDesign, Illustrator</li>
-				</ul>
-			</section>
-
 		</main>
 	</body>
 </html>
